testdata/baselines/reference/submodule/compiler/unusedTypeParameters_templateTag.errors.txt
/a.js(1,5): error TS6196: 'T' is declared but never used.


==== /a.js (1 errors) ====
    /** @template T */
        ~~~~~~~~~~~~~
!!! error TS6196: 'T' is declared but never used.
    function f() {}
    